<resources>
    <string name="app_name">ExerTime</string>
    <string name="dateButton">Next Exercise and Time</string>
    <string name="dateSTR">Date</string>
    <string name="exerciseSTR">Exercises</string>
    <string name="scoreSTR">Today\'s Score</string>
    <string name="profileSTR">profile</string>
    <string name="recordsSTR">My Records</string>
    <string name="signInGoogle">Sign in with Google</string>
    <string name="NotiSTR">notification</string>
    <string name="notiButton">Notify Me</string>
    <string name="nextExercise">Next scheduled exercise</string>
    <string name="exerciseNext">Next Scheduled Exercise</string>
    <string name="title_activity_next_exercise">nextExercise</string>
    <string name="scheduledExercise">Next Scheduled Exercise</string>
    <string name="protext">My Profile</string>
    <string name="scoretitle">Today\'s Score</string>
    <string name="notification">Notification</string>
    <string name="scoretext">My Score</string>
    <string name="nameTi">Name</string>
    <string name="name">Name</string>
    <string name="scehduleButton">Generate Schedule</string>
    <string name="goalTitle">Goal</string>
    <string name="goalheading">Goal</string>
    <string name="nameHeading">Name</string>
    <string name="AddScore">Finished an Exercise</string>
    <string name="FinishedAnExercise">Finished an Exercise</string>
    <string name="scoreString" />
    <string name="scoreValue">Score:</string>
    <string name="exerList">Exercise List</string>
    <string name="scoreValue">My Streak: 0</string>
    <string name="exerList">Exercise List</string>
    <string name="save">Save</string>
    <string name="goal">Goal</string>
</resources>
