<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.example.exertime.Home">

    <Button
        android:id="@+id/dateButton"
        android:layout_width="236dp"
        android:layout_height="51dp"
        android:layout_marginBottom="259dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="113dp"
        android:background="#FFB74D"
        android:onClick="hamburger"
        android:padding="10dp"
        android:text="@string/scehduleButton"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /><![CDATA[
        app:layout_constraintTop_toTopOf="parent" />
    ]]>
    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginEnd="115dp"
        android:background="#FFB74D"
        android:padding="10dp"
        android:text="@string/profileSTR"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="115dp" />

    <Button
        android:id="@+id/scoreBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="115dp"
        android:background="#FFB74D"
        android:padding="10dp"
        android:text="@string/scoretitle"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="115dp" />

    <ImageView
        android:id="@+id/progressImage"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginBottom="206dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseList"
        app:srcCompat="@drawable/linechart"
        android:layout_marginLeft="50dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="196dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressImage"
        app:srcCompat="@drawable/runningperson" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="148dp"
        android:layout_height="151dp"
        android:layout_marginBottom="183dp"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/progressImage"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        app:srcCompat="@drawable/runningperson"
        android:layout_marginLeft="80dp" />

    <Button
        android:id="@+id/exerciseList"
        android:layout_width="135dp"
        android:layout_height="54dp"
        android:layout_marginBottom="183dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="225dp"
        android:text="@string/exerList"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/progressImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    //image url: http://www.clipartpanda.com/categories/run-clipart


</android.support.constraint.ConstraintLayout>